--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,31 @@
+:root{
+    --themedark: rgb(81, 74, 161);
+    --themelight: white;
+}
+
 body {
     font-family: 'Poppins', serif;
     font-size: smaller;
+    background-color: var(--themedark);
+}
+
+fieldset, header {
+    border: none;
+    /* padding-block: 100px; */
+    /* border-style: double; */
+    border: 1px solid;
+    border-radius: 5px;
+    background-color: var(--themelight);
+}
+
+fieldset legend {
+    border: 1px solid;
+    border-radius: 2px;
+    /* content: none; */
+    /* visibility: hidden; */
+    background-color:var(--themelight);
+    /* box-shadow: offset-x offset-y blur-radius spread-radius color; */
+    box-shadow: 0px 1px 2px 0px gray;
 }
 
 .container {
@@ -19,7 +44,11 @@ body {
     
 }
 
-.profile-section > .profile-skills > div {
+.profile-section > .profile-skills > div,
+.profile-section > .contact-me > form,
+.right-section > .work-experience > div,
+.right-section > .personal-projects > div
+{
     font-size: smaller;
 }
 
@@ -43,17 +72,24 @@ body {
 .candidate-name {
     font-weight: 700;
     font-size:x-large;
+    padding: 0px 5px;
 }
 
 .candidate-details {
     display: flex;
     justify-content: space-between;
     font-size: larger;
+    padding: 0px 5px;
 }
 
 .contact-me-form{
     display: flex;
     flex-direction: column;
+}
+
+.contact-me-form > input, textarea {
+    font-family: inherit;
+    /* some input elements have their own font styles */
 }
 
 .contact-me-submit-btn{
